Upgrade to java 11