@@ -38,7 +38,9 @@ if [ -z ${AWS_CONFIG_FILE+x} ]; then
 fi
 
 # Build the command
-COMMAND="${JAVA} -Xms512m -Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${LOG_DIR} -jar ${HOME_DIR}/lib/carbonj*.jar --logging.file.name=${LOG_FILE} --spring.config.location=${CONFIG_FILE}"
+COMMAND="${JAVA} -Xms512m -Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${LOG_DIR} \
+--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED -jar ${HOME_DIR}/lib/carbonj*.jar \
+--logging.file.name=${LOG_FILE} --spring.config.location=${CONFIG_FILE}"
 
 echo -e "Invoking CarbonJ\n" | tee -a $LOG_FILE
 echo -e $COMMAND | tee -a $LOG_FILE
